[project]
name = "triton-examples"
version = "0.1.0"
description = "Run Triton with CUDA 12.8 on Windows using multiple package indexes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy",
    "cycler",
    "filelock",
    "fonttools",
    "fsspec",
    "jinja2",
    "kiwisolver",
    "markupsafe",
    "matplotlib",
    "mpmath",
    "networkx",
    "numpy",
    "nvidia-cublas-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "packaging",
    "pandas",
    "pillow",
    "pip",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "setuptools",
    "six",
    "sympy",
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "triton-windows",
    "typing-extensions",
    "tzdata",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "PyPi"
url = "https://pypi.org/simple"
default = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
triton-examples = { path = ".", editable = true }

[tool.pixi.tasks]
