[project]
name = "triton-examples"
version = "0.2.3"
description = "Run Triton with CUDA 12.9 on Windows using multiple package indexes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy",
    "cycler",
    "filelock",
    "fonttools",
    "fsspec",
    "jinja2",
    "kiwisolver",
    "markupsafe",
    "matplotlib",
    "mpmath",
    "networkx",
    "numpy",
    "packaging",
    "pandas",
    "pillow",
    "pip",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "setuptools",
    "six",
    "sympy",
    "torch",
    "torchaudio",
    "torchvision",
    "triton-windows",
    "typing-extensions",
    "tzdata",
]

[[tool.uv.index]]
name = "PyPi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
upgrade = true

[tool.uv.pip]
index-strategy = "unsafe-best-match"
